[package]
name = "rustytree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "3.2", features = ["derive", "wrap_help"] }
globset = "0.4"
humansize = "2.1"
tempfile = "3"
rayon = "1.5"
lscolors = "0.12"
unix_mode = "0.1.3"
users = "0.11.0"
